--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/Users
 spring.datasource.username=Quaerith
-spring.datasource.password=Unicornturbat12
+spring.datasource.password=Unicornturbat98
