--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/Users
-spring.datasource.username=Quaerith
-spring.datasource.password=Unicornturbat98
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/findr
+spring.datasource.username=root
+spring.datasource.password=localhost
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.dialect.storage_engine=innodb
