--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/findr
+spring.datasource.url=jdbc:mysql://localhost:3306/test_db
 spring.datasource.username=root
 spring.datasource.password=localhost
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-hibernate.dialect.storage_engine=innodb
