--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.springframework</groupId>
-    <artifactId>gs-mysql-data</artifactId>
-    <version>0.1.0</version>
+    <groupId>uk.ac.ed.tardis</groupId>
+    <artifactId>Findr</artifactId>
+    <version>0.0.2</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
