--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>uk.ac.ed.tardis</groupId>
+    <groupId>com.tardis</groupId>
     <artifactId>Findr</artifactId>
     <version>0.0.2</version>
 
@@ -33,7 +33,9 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
-        <dependency> <groupId>javax.xml.bind</groupId> <artifactId>jaxb-api</artifactId>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
             <version>2.3.0</version>
         </dependency>
 
